Fix issues on smaller mobile screens

--- a/src/ContactIcon.scss
+++ b/src/ContactIcon.scss
@@ -19,6 +19,7 @@ a.scale-up-center:hover {
 .contact-icon-container {
   position: relative;
   display: inline-block;
+  margin-bottom: 40px;
 }
 
 .tooltip {
